# alpamayo

./: .gitignore  README.md  RUN_ALPAMAYO_AND_LLAVA_COMPARISON.md  pyproject.toml
scripts/: run_inference_jetson.sh
src/alpamayo_r1/: jetson_compat.py  load_physical_aiavdataset.py  test_inference.py
